// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitButton for business themes renders styles correctly 1`] = `
.c6 {
  display: inline-block;
  position: relative;
  color: #26A826;
  background-color: transparent;
}

.c6:hover {
  color: #1E861E;
  background-color: transparent;
}

.c6::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e910";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
}

.c7 .c5 {
  color: #255bc7;
}

.c7:active .c5 {
  color: #255bc7;
}

.c7:hover .c5 {
  color: #ffffff;
}

.c7:focus .c5 {
  color: #ffffff;
}

.c7 + .c1 {
  margin-left: 15px;
}

.c7 .c5 {
  margin-left: 0px;
  margin-right: 8px;
}

.c8 + .c1 {
  margin-left: 16px;
}

.c8:hover .c5 {
  color: #FFFFFF;
}

.c8 .c5 {
  margin-left: 0px;
  margin-right: 8px;
}

.c9 + .c1 {
  margin-left: 16px;
}

.c9:hover .c5 {
  color: #FFFFFF;
}

.c9 .c5 {
  margin-left: 0px;
  margin-right: 8px;
}

.c10 + .c1 {
  margin-left: 16px;
}

.c10:hover .c5 {
  color: #FFFFFF;
}

.c10 .c5 {
  margin-left: 0px;
  margin-right: 8px;
}

.c11 + .c1 {
  margin-left: 16px;
}

.c11:hover .c5 {
  color: #FFFFFF;
}

.c11 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c2:focus {
  outline: solid 3px #FFB500;
}

.c2 + .c1 {
  margin-left: 16px;
}

.c2:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c2:hover .c5 {
  color: #FFFFFF;
}

.c2 .c5 {
  margin-left: 0px;
  margin-right: 8px;
}

.c12 > .c1 {
  margin: 0;
}

.c12 > .c1:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c12 > .c1:focus {
  border: 1px solid #1e499f;
  margin: 0;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c0 > .c1 {
  margin: 0;
}

.c0 > .c1:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c13 .c5 {
  color: #255bc7;
}

.c13:active .c5 {
  color: #255bc7;
}

.c13:hover .c5 {
  color: #ffffff;
}

.c13:focus .c5 {
  color: #ffffff;
}

.c13 + .c3 {
  margin-left: 15px;
}

.c13 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c1 + .c13 {
  margin-left: 0;
}

.c1 + .c13:focus {
  margin-left: -3px;
}

.c1 + .c13 .c5 {
  margin-left: 0;
}

.c13.c13,
.c1 + .c13:focus {
  margin-left: 0;
  padding: 0 5px;
}

.c14 .c5 {
  color: #255bc7;
}

.c14:active .c5 {
  color: #255bc7;
}

.c14:hover .c5 {
  color: #ffffff;
}

.c14:focus .c5 {
  color: #ffffff;
}

.c14 + .c3 {
  margin-left: 15px;
}

.c14 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c14,
.c14 .c5 {
  color: #FFFFFF;
}

.c1 + .c14 {
  margin-left: 0;
}

.c1 + .c14:focus {
  margin-left: -3px;
}

.c1 + .c14 .c5 {
  margin-left: 0;
}

.c14.c14,
.c1 + .c14:focus {
  margin-left: 0;
  padding: 0 5px;
}

.c15 + .c3 {
  margin-left: 16px;
}

.c15:hover .c5 {
  color: #FFFFFF;
}

.c15 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c1 + .c15 {
  margin-left: 0;
}

.c1 + .c15:focus {
  margin-left: -3px;
}

.c1 + .c15 .c5 {
  margin-left: 0;
}

.c16 + .c3 {
  margin-left: 16px;
}

.c16:hover .c5 {
  color: #FFFFFF;
}

.c16 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c16,
.c16 .c5 {
  color: #FFFFFF;
}

.c1 + .c16 {
  margin-left: 0;
}

.c1 + .c16:focus {
  margin-left: -3px;
}

.c1 + .c16 .c5 {
  margin-left: 0;
}

.c17 + .c3 {
  margin-left: 16px;
}

.c17:hover .c5 {
  color: #FFFFFF;
}

.c17 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c1 + .c17 {
  margin-left: 0;
}

.c1 + .c17:focus {
  margin-left: -3px;
}

.c1 + .c17 .c5 {
  margin-left: 0;
}

.c18 + .c3 {
  margin-left: 16px;
}

.c18:hover .c5 {
  color: #FFFFFF;
}

.c18 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c18,
.c18 .c5 {
  color: #FFFFFF;
}

.c1 + .c18 {
  margin-left: 0;
}

.c1 + .c18:focus {
  margin-left: -3px;
}

.c1 + .c18 .c5 {
  margin-left: 0;
}

.c19 + .c3 {
  margin-left: 16px;
}

.c19:hover .c5 {
  color: #FFFFFF;
}

.c19 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c1 + .c19 {
  margin-left: 0;
}

.c1 + .c19:focus {
  margin-left: -3px;
}

.c1 + .c19 .c5 {
  margin-left: 0;
}

.c20 + .c3 {
  margin-left: 16px;
}

.c20:hover .c5 {
  color: #FFFFFF;
}

.c20 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c20,
.c20 .c5 {
  color: #FFFFFF;
}

.c1 + .c20 {
  margin-left: 0;
}

.c1 + .c20:focus {
  margin-left: -3px;
}

.c1 + .c20 .c5 {
  margin-left: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
  border-left-width: 0;
  padding: 0 10px;
}

.c4:focus {
  outline: solid 3px #FFB500;
}

.c4 + .c3 {
  margin-left: 16px;
}

.c4:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c4:hover .c5 {
  color: #FFFFFF;
}

.c4 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c1 + .c4 {
  margin-left: 0;
}

.c1 + .c4:focus {
  margin-left: -3px;
}

.c1 + .c4 .c5 {
  margin-left: 0;
}

.c21 .c1 {
  background-color: #006045;
  border: 1px solid #006045;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c21 .c1:focus,
.c21 .c1:hover {
  background-color: #003F2E;
}

.c21 .c1 + .c29 .c1 {
  margin-top: 3px;
}

.c21 .c1 {
  background-color: #1e499f;
  border: 1px solid #1e499f;
  color: #FFF;
  height: 31px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 0 18px;
}

.c21 .c1:focus,
.c21 .c1:hover {
  background-color: #163777;
}

.c22 .c1 {
  background-color: #006045;
  border: 1px solid #006045;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c22 .c1:focus,
.c22 .c1:hover {
  background-color: #003F2E;
}

.c22 .c1 + .c29 .c1 {
  margin-top: 3px;
}

.c23 .c1 {
  background-color: #005B9A;
  border: 1px solid #005B9A;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c23 .c1:focus,
.c23 .c1:hover {
  background-color: #004372;
}

.c23 .c1 + .c29 .c1 {
  margin-top: 3px;
}

.c24 .c1 {
  background-color: #4F2775;
  border: 1px solid #4F2775;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c24 .c1:focus,
.c24 .c1:hover {
  background-color: #3D1E5B;
}

.c24 .c1 + .c29 .c1 {
  margin-top: 3px;
}

.c25 .c1 {
  background-color: #006045;
  border: 1px solid #006045;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  z-index: 10;
}

.c25 .c1:focus,
.c25 .c1:hover {
  background-color: #003F2E;
}

.c25 .c1 + .c29 .c1 {
  margin-top: 3px;
}

.c25 .c1 {
  background-color: #1e499f;
  border: 1px solid #1e499f;
  color: #FFF;
  height: 31px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 0 18px;
}

.c25 .c1:focus,
.c25 .c1:hover {
  background-color: #163777;
}

.c26 .c1 {
  background-color: #006045;
  border: 1px solid #006045;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  z-index: 10;
}

.c26 .c1:focus,
.c26 .c1:hover {
  background-color: #003F2E;
}

.c26 .c1 + .c29 .c1 {
  margin-top: 3px;
}

.c27 .c1 {
  background-color: #005B9A;
  border: 1px solid #005B9A;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  z-index: 10;
}

.c27 .c1:focus,
.c27 .c1:hover {
  background-color: #004372;
}

.c27 .c1 + .c29 .c1 {
  margin-top: 3px;
}

.c28 .c1 {
  background-color: #4F2775;
  border: 1px solid #4F2775;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  z-index: 10;
}

.c28 .c1:focus,
.c28 .c1:hover {
  background-color: #3D1E5B;
}

.c28 .c1 + .c29 .c1 {
  margin-top: 3px;
}

<div
  aria-haspopup="true"
  className="c0"
  data-component="split-button"
  data-element="bar"
  data-role="baz"
  onMouseLeave={[Function]}
>
  <button
    className="c1 c2"
    data-component="button"
    data-element="main-button"
    disabled={false}
    id="guid-12345"
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
    role="button"
    size="medium"
  >
    <span>
      <span
        data-element="main-text"
      >
        Split button
      </span>
    </span>
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Show more"
    className="c1 c3 c4"
    data-element="toggle-button"
    disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
    size="medium"
  >
    <span
      className="c5 c6"
      data-component="icon"
      data-element="dropdown"
      disabled={false}
      fontSize="small"
      type="dropdown"
    />
  </button>
</div>
`;

exports[`SplitButton for the classic theme renders styles correctly 1`] = `
.c6 {
  display: inline-block;
  position: relative;
  color: #00805D;
  background-color: transparent;
  color: rgba(0,0,0,0.85);
  background-color: transparent;
}

.c6:hover {
  color: #00664A;
  background-color: transparent;
}

.c6::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e910";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
}

.c6::before {
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 31px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 18px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 .c5 {
  color: #255bc7;
}

.c2:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c2:active .c5 {
  color: #255bc7;
}

.c2:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c2:hover .c5 {
  color: #ffffff;
}

.c2:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c2:focus .c5 {
  color: #ffffff;
}

.c2 + .c1 {
  margin-left: 15px;
}

.c2 .c5 {
  margin-left: 0px;
  margin-right: 8px;
}

.c7 + .c1 {
  margin-left: 16px;
}

.c7:hover .c5 {
  color: #FFFFFF;
}

.c7 .c5 {
  margin-left: 0px;
  margin-right: 8px;
}

.c8 + .c1 {
  margin-left: 16px;
}

.c8:hover .c5 {
  color: #FFFFFF;
}

.c8 .c5 {
  margin-left: 0px;
  margin-right: 8px;
}

.c9 + .c1 {
  margin-left: 16px;
}

.c9:hover .c5 {
  color: #FFFFFF;
}

.c9 .c5 {
  margin-left: 0px;
  margin-right: 8px;
}

.c10 + .c1 {
  margin-left: 16px;
}

.c10:hover .c5 {
  color: #FFFFFF;
}

.c10 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c11 + .c1 {
  margin-left: 16px;
}

.c11:hover .c5 {
  color: #FFFFFF;
}

.c11 .c5 {
  margin-left: 0px;
  margin-right: 8px;
}

.c12 + .c1 {
  margin-left: 16px;
}

.c12 .c5 {
  margin-left: 0px;
  margin-right: 8px;
}

.c13 + .c1 {
  margin-left: 16px;
}

.c13 .c5 {
  margin-left: 0px;
  margin-right: 8px;
}

.c14 + .c1 {
  margin-left: 16px;
}

.c14 .c5 {
  margin-left: 0px;
  margin-right: 8px;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c0 > .c1 {
  margin: 0;
}

.c0 > .c1:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c0 > .c1:focus {
  border: 1px solid #1e499f;
  margin: 0;
}

.c15 > .c1 {
  margin: 0;
}

.c15 > .c1:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 31px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 18px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-left-width: 0;
  padding: 0 10px;
  z-index: 20;
}

.c4 .c5 {
  color: #255bc7;
}

.c4:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c4:active .c5 {
  color: #255bc7;
}

.c4:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c4:hover .c5 {
  color: #ffffff;
}

.c4:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c4:focus .c5 {
  color: #ffffff;
}

.c4 + .c3 {
  margin-left: 15px;
}

.c4 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c1 + .c4 {
  margin-left: 0;
}

.c1 + .c4:focus {
  margin-left: -3px;
}

.c1 + .c4 .c5 {
  margin-left: 0;
}

.c4.c4,
.c1 + .c4:focus {
  margin-left: 0;
  padding: 0 5px;
}

.c16 .c5 {
  color: #255bc7;
}

.c16:active .c5 {
  color: #255bc7;
}

.c16:hover .c5 {
  color: #ffffff;
}

.c16:focus .c5 {
  color: #ffffff;
}

.c16 + .c3 {
  margin-left: 15px;
}

.c16 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c16,
.c16 .c5 {
  color: #FFFFFF;
}

.c1 + .c16 {
  margin-left: 0;
}

.c1 + .c16:focus {
  margin-left: -3px;
}

.c1 + .c16 .c5 {
  margin-left: 0;
}

.c16.c16,
.c1 + .c16:focus {
  margin-left: 0;
  padding: 0 5px;
}

.c17 + .c3 {
  margin-left: 16px;
}

.c17:hover .c5 {
  color: #FFFFFF;
}

.c17 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c1 + .c17 {
  margin-left: 0;
}

.c1 + .c17:focus {
  margin-left: -3px;
}

.c1 + .c17 .c5 {
  margin-left: 0;
}

.c18 + .c3 {
  margin-left: 16px;
}

.c18:hover .c5 {
  color: #FFFFFF;
}

.c18 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c18,
.c18 .c5 {
  color: #FFFFFF;
}

.c1 + .c18 {
  margin-left: 0;
}

.c1 + .c18:focus {
  margin-left: -3px;
}

.c1 + .c18 .c5 {
  margin-left: 0;
}

.c19 + .c3 {
  margin-left: 16px;
}

.c19:hover .c5 {
  color: #FFFFFF;
}

.c19 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c1 + .c19 {
  margin-left: 0;
}

.c1 + .c19:focus {
  margin-left: -3px;
}

.c1 + .c19 .c5 {
  margin-left: 0;
}

.c20 + .c3 {
  margin-left: 16px;
}

.c20:hover .c5 {
  color: #FFFFFF;
}

.c20 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c20,
.c20 .c5 {
  color: #FFFFFF;
}

.c1 + .c20 {
  margin-left: 0;
}

.c1 + .c20:focus {
  margin-left: -3px;
}

.c1 + .c20 .c5 {
  margin-left: 0;
}

.c21 + .c3 {
  margin-left: 16px;
}

.c21:hover .c5 {
  color: #FFFFFF;
}

.c21 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c1 + .c21 {
  margin-left: 0;
}

.c1 + .c21:focus {
  margin-left: -3px;
}

.c1 + .c21 .c5 {
  margin-left: 0;
}

.c22 + .c3 {
  margin-left: 16px;
}

.c22:hover .c5 {
  color: #FFFFFF;
}

.c22 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c22,
.c22 .c5 {
  color: #FFFFFF;
}

.c1 + .c22 {
  margin-left: 0;
}

.c1 + .c22:focus {
  margin-left: -3px;
}

.c1 + .c22 .c5 {
  margin-left: 0;
}

.c23 + .c3 {
  margin-left: 16px;
}

.c23:hover .c5 {
  color: #FFFFFF;
}

.c23 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c1 + .c23 {
  margin-left: 0;
}

.c1 + .c23:focus {
  margin-left: -3px;
}

.c1 + .c23 .c5 {
  margin-left: 0;
}

.c24 + .c3 {
  margin-left: 16px;
}

.c24 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c1 + .c24 {
  margin-left: 0;
}

.c1 + .c24 .c5 {
  margin-left: 0;
}

.c25 + .c3 {
  margin-left: 16px;
}

.c25 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c1 + .c25 {
  margin-left: 0;
}

.c1 + .c25 .c5 {
  margin-left: 0;
}

.c26 + .c3 {
  margin-left: 16px;
}

.c26 .c5 {
  margin-left: 8px;
  margin-right: 0px;
}

.c1 + .c26 {
  margin-left: 0;
}

.c1 + .c26 .c5 {
  margin-left: 0;
}

.c27 .c1 {
  background-color: #006045;
  border: 1px solid #006045;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c27 .c1:focus,
.c27 .c1:hover {
  background-color: #003F2E;
}

.c27 .c1 + .c35 .c1 {
  margin-top: 3px;
}

.c27 .c1 {
  background-color: #1e499f;
  border: 1px solid #1e499f;
  color: #FFF;
  height: 31px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 0 18px;
}

.c27 .c1:focus,
.c27 .c1:hover {
  background-color: #163777;
}

.c28 .c1 {
  background-color: #006045;
  border: 1px solid #006045;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c28 .c1:focus,
.c28 .c1:hover {
  background-color: #003F2E;
}

.c28 .c1 + .c35 .c1 {
  margin-top: 3px;
}

.c29 .c1 {
  background-color: #005B9A;
  border: 1px solid #005B9A;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c29 .c1:focus,
.c29 .c1:hover {
  background-color: #004372;
}

.c29 .c1 + .c35 .c1 {
  margin-top: 3px;
}

.c30 .c1 {
  background-color: #4F2775;
  border: 1px solid #4F2775;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c30 .c1:focus,
.c30 .c1:hover {
  background-color: #3D1E5B;
}

.c30 .c1 + .c35 .c1 {
  margin-top: 3px;
}

.c31 .c1 {
  background-color: #006045;
  border: 1px solid #006045;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  z-index: 10;
}

.c31 .c1:focus,
.c31 .c1:hover {
  background-color: #003F2E;
}

.c31 .c1 + .c35 .c1 {
  margin-top: 3px;
}

.c31 .c1 {
  background-color: #1e499f;
  border: 1px solid #1e499f;
  color: #FFF;
  height: 31px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 0 18px;
}

.c31 .c1:focus,
.c31 .c1:hover {
  background-color: #163777;
}

.c32 .c1 {
  background-color: #006045;
  border: 1px solid #006045;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  z-index: 10;
}

.c32 .c1:focus,
.c32 .c1:hover {
  background-color: #003F2E;
}

.c32 .c1 + .c35 .c1 {
  margin-top: 3px;
}

.c33 .c1 {
  background-color: #005B9A;
  border: 1px solid #005B9A;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  z-index: 10;
}

.c33 .c1:focus,
.c33 .c1:hover {
  background-color: #004372;
}

.c33 .c1 + .c35 .c1 {
  margin-top: 3px;
}

.c34 .c1 {
  background-color: #4F2775;
  border: 1px solid #4F2775;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  z-index: 10;
}

.c34 .c1:focus,
.c34 .c1:hover {
  background-color: #3D1E5B;
}

.c34 .c1 + .c35 .c1 {
  margin-top: 3px;
}

<div
  aria-haspopup="true"
  className="c0"
  data-component="split-button"
  data-element="bar"
  data-role="baz"
  onMouseLeave={[Function]}
>
  <button
    className="c1 c2"
    data-component="button"
    data-element="main-button"
    disabled={false}
    id="guid-12345"
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
    role="button"
    size="medium"
  >
    <span>
      <span
        data-element="main-text"
      >
        Split button
      </span>
    </span>
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Show more"
    className="c1 c3 c4"
    data-element="toggle-button"
    disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
    size="medium"
  >
    <span
      className="c5 c6"
      data-component="icon"
      data-element="dropdown"
      disabled={false}
      fontSize="small"
      type="dropdown"
    />
  </button>
</div>
`;
